fix(FE; AdminPanel): fixed spacing on large screens

--- a/diversity-lunch-fe/src/user-interface/components/body-container/body-container.scss
+++ b/diversity-lunch-fe/src/user-interface/components/body-container/body-container.scss
@@ -22,6 +22,7 @@
 
 @media (min-width: $screen-extra-large){
   .bodyContainer {
-    margin-left: 250px;
+    margin-left: 300px;
+    margin-right: 50px;
   }
 }
